force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the modification logs</description>
    <label>Audit Logs</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>