force-app/main/default/objects/Audit_Log__c/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <description>To store details of change occurred</description>
    <label>Change Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>