force-app/main/default/objects/Audit_Log__c/fields/Membership_Record__c.field-meta.xml
<CustomField>
    <fullName>Membership_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to membership record for tracking.</description>
    <label>Membership Record</label>
    <referenceTo>Memberships__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>