force-app/main/default/objects/Audit_Log__c/fields/ModificationTime__c.field-meta.xml
<CustomField>
    <fullName>ModificationTime__c</fullName>
    <description>Records the date and time when the modification occurred.</description>
    <label>Modification Time</label>
    <type>DateTime</type>
</CustomField>