force-app/main/default/objects/Audit_Log__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the user who performed the modification.</description>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>