force-app/main/default/objects/Audit_Log__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <description>Captures the new value after the modification.</description>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>