force-app/main/default/objects/Audit_Log__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <description>Captures the old value before the modification.</description>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>